feat: add jni statements